# investment-manager

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.claude/: settings.json
.claude/hooks/: pre-commit-check.sh
.claude/skills/add-institution/: SKILL.md
.claude/skills/update-accounts/: SKILL.md
.claude/skills/update-assets/: SKILL.md
.claude/skills/update-claude-md/: SKILL.md
.claude/skills/update-readme/: SKILL.md
.github/workflows/: frontend-tests.yml
src/investment_manager/: analysis.py  cli.py  decomposition.py  enrichment.py  models.py  paths.py  pipeline.py  registry.py  server.py
src/investment_manager/parsers/: alight.py  base.py  fidelity.py  interactive_brokers.py  schwab.py  utils.py
src/investment_manager/web/: app.js  index.html  style.css
src/schemas/: asset-metadata.csv  institution-asset-mapping.csv  known-accounts.csv  positions-input.csv
tests/: conftest.py  frontend_server.py  test_alight_parser.py  test_analysis.py  test_cli.py  test_decomposition.py  test_enrichment.py  test_fidelity_parser.py  test_integration.py  test_interactive_brokers_parser.py  test_pipeline.py  test_registry.py  test_schwab_parser.py  test_server.py
tests-frontend/helpers/: app.js
tests-frontend/specs/: anonymize.spec.js  app-shell.spec.js  errors.spec.js  retirement.spec.js  tables.spec.js  theme.spec.js  visual.spec.js
tests/fixture_data/: asset-metadata.csv  fund-compositions.csv  known-accounts.csv
tests/fixtures/: fidelity_sample.csv
(+4 files in other folders)
