[project]
name = "investment-manager"
version = "0.1.0"
description = "Consolidate investment position data from multiple financial institutions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "polars>=1.0.0",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
invest = "investment_manager.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/investment_manager"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
